add translation for the most webpage

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -116,9 +116,12 @@
     "createAccountButton": "إنشاء حساب",
     "alreadyHaveAccount": "لديك حساب بالفعل؟",
     "dontHaveAccount": "ليس لديك حساب؟",
+    "noAccount": "ليس لديك حساب؟",
     "signInHere": "سجل الدخول",
+    "signIn": "تسجيل الدخول",
     "signUpFree": "سجل مجاناً",
     "backToLogin": "← العودة لتسجيل الدخول",
+    "backToLoginArrow": "← العودة لتسجيل الدخول",
     "backToProfile": "العودة للملف الشخصي",
     "loginSuccess": "تم تسجيل الدخول بنجاح!",
     "registerSuccess": "تم التسجيل بنجاح!",
@@ -130,12 +133,15 @@
     "accountType": "نوع الحساب",
     "jobSeeker": "أنا باحث عن عمل",
     "companyOwner": "أنا شركة",
+    "imJobSeeker": "أنا باحث عن عمل",
+    "imCompany": "أنا شركة",
     "employer": "صاحب عمل",
     "adminOnly": "المشرفون فقط",
     "welcomeBack": "مرحباً بعودتك",
     "createAccount": "إنشاء حساب",
     "signInJobSeeker": "سجل الدخول لإيجاد وظيفة أحلامك",
     "signInCompany": "سجل الدخول لإدارة شركتك",
+    "joinJobsIQ": "انضم إلى JobsIQ وابدأ رحلتك المهنية",
     "registerJobSeeker": "انضم إلى JobsIQ وابدأ رحلتك المهنية",
     "registerCompany": "سجل شركتك وابحث عن المواهب العظيمة",
     "companyName": "اسم الشركة",
@@ -143,6 +149,7 @@
     "yourFullName": "اسمك الكامل",
     "yourEmail": "بريدك الإلكتروني",
     "agreeToTerms": "أوافق على",
+    "iAgreeToThe": "أوافق على",
     "termsOfService": "شروط الخدمة",
     "and": "و",
     "privacyPolicy": "سياسة الخصوصية",
@@ -153,9 +160,11 @@
     "passwordStrengthStrong": "كلمة مرور قوية",
     "forgotPasswordTitle": "نسيت كلمة المرور؟",
     "forgotPasswordSubtitle": "لا تقلق! أدخل عنوان بريدك الإلكتروني وسنرسل لك رابطاً لإعادة تعيين كلمة المرور.",
+    "forgotPasswordMessage": "لا تقلق! أدخل عنوان بريدك الإلكتروني وسنرسل لك رابطاً لإعادة تعيين كلمة المرور.",
     "sendResetLink": "إرسال رابط إعادة التعيين",
     "checkYourEmail": "تحقق من بريدك الإلكتروني",
-    "resetLinkSentTo": "لقد أرسلنا رابط إعادة تعيين كلمة المرور إلى {email}. يرجى التحقق من صندوق الوارد الخاص بك واتباع التعليمات لإعادة تعيين كلمة المرور.",
+    "resetLinkSent": "لقد أرسلنا رابط إعادة تعيين كلمة المرور إلى {email}. يرجى التحقق من صندوق الوارد واتباع التعليمات.",
+    "resetLinkSentTo": "لقد أرسلنا رابط إعادة تعيين كلمة المرور إلى {email}. يرجى التحقق من صندوق الوارد الخاص بك واتباع التعليمات لأعادة تعيين كلمة المرور.",
     "resetPasswordTitle": "إعادة تعيين كلمة المرور",
     "resetPasswordSubtitle": "يرجى إدخال كلمة المرور الجديدة.",
     "goToLogin": "الذهاب لتسجيل الدخول",
@@ -197,6 +206,7 @@
     "yourEmailPlaceholder": "john@company.com",
     "namePlaceholder": "أحمد محمد",
     "companyNamePlaceholder": "شركة أكمي",
+    "passwordPlaceholder": "أدخل كلمة المرور",
     "enterPassword": "أدخل كلمة المرور"
   },
   "jobs": {
@@ -280,6 +290,7 @@
     "shareOnTwitter": "مشاركة على X",
     "shareOnFacebook": "مشاركة على فيسبوك",
     "shareOnInstagram": "مشاركة على إنستغرام",
+    "shareOnLinkedIn": "مشاركة على لينكد إن",
     "shareOnSnapchat": "مشاركة على سناب شات",
     "copyLink": "نسخ الرابط",
     "linkCopied": "تم نسخ الرابط!",
@@ -343,7 +354,10 @@
     "jobDescription": "وصف الوظيفة",
     "responsibilities": "المسؤوليات",
     "posted": "نُشر",
-    "expires": "ينتهي"
+    "expires": "ينتهي",
+    "compensation": "التعويض",
+    "jobOverview": "نظرة عامة على الوظيفة",
+    "department": "القسم"
   },
   "companies": {
     "title": "الشركات",
@@ -360,11 +374,36 @@
     "companyDetails": "تفاصيل الشركة",
     "createCompany": "إنشاء شركة",
     "editCompany": "تعديل الشركة",
+    "updateYourCompanyInformation": "تحديث معلومات شركتك",
     "deleteCompany": "حذف الشركة",
+    "companyNotFound": "لم يتم العثور على الشركة",
+    "goBack": "عودة",
     "myCompanies": "شركاتي",
     "viewAllJobs": "عرض جميع الوظائف",
     "followCompany": "متابعة الشركة",
     "unfollowCompany": "إلغاء متابعة الشركة",
+    "basicInformation": "المعلومات الأساسية",
+    "enterCompanyName": "أدخل اسم الشركة",
+    "chooseLogo": "اختر الشعار",
+    "coverImage": "صورة الغلاف",
+    "chooseCover": "اختر الغلاف",
+    "uploadCompanyImages": "تحميل صور الشركة",
+    "uploadImages": "تحميل الصور",
+    "imagesUploaded": "{count} / 10 صورة محملة",
+    "briefOverviewCompany": "نظرة عامة موجزة عن شركتك...",
+    "tellUsAboutCompany": "أخبرنا عن شركتك...",
+    "shortCompanyTagline": "شعار قصير للشركة",
+    "selectCountry": "اختر الدولة",
+    "selectCompanySize": "اختر حجم الشركة",
+    "foundedDate": "تاريخ التأسيس",
+    "updateCompany": "تحديث الشركة",
+    "companyNameRequired": "اسم الشركة *",
+    "companyPictures": "صور الشركة",
+    "maximum10Images": "(بحد أقصى 10 صور)",
+    "chooseCoverImage": "اختر صورة الغلاف",
+    "pngJpgGifUpTo2MB": "PNG, JPG, GIF حتى 2 ميجابايت",
+    "pngJpgGifUpTo2MBEach": "PNG, JPG, GIF حتى 2 ميجابايت لكل صورة",
+    "updateYourCompanyInfo": "تحديث معلومات شركتك",
     "noCompaniesFound": "لم يتم العثور على شركات",
     "searchCompanies": "ابحث عن شركات...",
     "tryAdjustingSearch": "حاول تعديل معايير البحث",
@@ -396,19 +435,55 @@
     "twitter": "تويتر / X",
     "facebook": "فيسبوك",
     "instagram": "إنستغرام",
-    "youtube": "يوتيوب",
-    "companyNotFound": "الشركة غير موجودة",
+    "youtube": "YouTube",
     "browseAllCompanies": "تصفح جميع الشركات",
     "memberSince": "عضو منذ",
     "followUs": "تابعنا",
     "noOpenPositions": "لا توجد وظائف متاحة",
     "thisCompanyHasNoActiveJobs": "ليس لدى هذه الشركة حالياً أي إعلانات وظائف نشطة.",
     "companyPhotos": "صور الشركة",
+    "viewCompanyProfile": "عرض ملف الشركة",
     "location": "الموقع",
     "active": "نشط",
     "email": "البريد الإلكتروني",
     "description": "الوصف",
-    "noDescriptionAvailable": "لا يوجد وصف متاح."
+    "noDescriptionAvailable": "لا يوجد وصف متاح.",
+    "quickActions": "إجراءات سريعة",
+    "postNewJob": "نشر وظيفة جديدة",
+    "viewPublicProfile": "عرض الملف العام",
+    "phone": "الهاتف",
+    "address": "العنوان",
+    "postedJobs": "الوظائف المنشورة",
+    "deleteJob": "حذف الوظيفة",
+    "areYouSureDeleteJob": "هل أنت متأكد أنك تريد حذف",
+    "deleteJobWarning": "لا يمكن التراجع عن هذا الإجراء وسيتم فقدان جميع الطلبات لهذه الوظيفة.",
+    "areYouSureDeleteCompany": "هل أنت متأكد أنك تريد حذف",
+    "deleteCompanyWarning": "لا يمكن التراجع عن هذا الإجراء وسيتم أيضاً حذف جميع الوظائف والطلبات المرتبطة بهذه الشركة.",
+    "noJobsPostedYet": "لم يتم نشر وظائف بعد",
+    "startPostingJobs": "ابدأ بنشر الوظائف لجذب المرشحين الموهوبين.",
+    "postYourFirstJob": "انشر وظيفتك الأولى",
+    "remote": "عن بُعد",
+    "companyNotFoundMessage": "الشركة التي تبحث عنها غير موجودة أو تم إزالتها.",
+    "inactive": "غير نشط",
+    "companyType": "نوع الشركة",
+    "selectType": "اختر النوع",
+    "startup": "شركة ناشئة",
+    "smallBusiness": "عمل صغير",
+    "midMarket": "سوق متوسط",
+    "enterprise": "مؤسسة",
+    "nonprofit": "غير ربحية",
+    "government": "حكومية",
+    "agency": "وكالة",
+    "contactInformation": "معلومات الاتصال",
+    "category": "الفئة",
+    "selectCategory": "اختر الفئة",
+    "streetAddress": "عنوان الشارع",
+    "typeToSearchCities": "اكتب للبحث عن المدن...",
+    "companyStatus": "حالة الشركة",
+    "companyActive": "الشركة نشطة",
+    "companyActiveDescription": "اجعل هذه الشركة مرئية للباحثين عن عمل",
+    "currentlyHiring": "التوظيف مستمر",
+    "currentlyHiringDescription": "إظهار شارة \"نحن نوظف\" على ملف الشركة"
   },
   "cv": {
     "title": "السيرة الذاتية",
@@ -756,28 +831,42 @@
   },
   "about": {
     "title": "حول JobsIQ",
+    "subtitle": "نحن في مهمة لربط المهنيين الموهوبين بوظائف أحلامهم ومساعدة الشركات في بناء فرق رائعة.",
     "ourMission": "مهمتنا",
-    "ourMissionText": "ربط المهنيين الموهوبين بوظائف أحلامهم ومساعدة الشركات في العثور على المرشحين المثاليين.",
-    "ourValues": "قيمنا",
+    "ourMissionText1": "في JobsIQ، نؤمن بأن العثور على الوظيفة المناسبة يجب أن يكون بسيطاً وشفافاً ومُمكّناً. تربط منصتنا الباحثين عن عمل بفرص تتناسب مع مهاراتهم وقيمهم وتطلعاتهم المهنية.",
+    "ourMissionText2": "نحن ملتزمون بإنشاء عملية توظيف عادلة وشاملة حيث يتم الاعتراف بالموهبة وتكون الفرص متاحة للجميع.",
+    "ourValues": "قيمنا الأساسية",
+    "ourValuesSubtitle": "المبادئ التي توجه كل ما نقوم به",
     "transparency": "الشفافية",
     "transparencyDesc": "نؤمن بالتواصل المفتوح والصادق في كل خطوة من عملية التوظيف.",
     "innovation": "الابتكار",
     "innovationDesc": "نحسّن منصتنا باستمرار بالتكنولوجيا والميزات المتطورة.",
-    "diversity": "التنوع والشمول",
-    "diversityDesc": "ندعم التنوع ونخلق فرصاً متساوية لجميع الباحثين عن عمل.",
+    "inclusivity": "الشمولية",
+    "inclusivityDesc": "ندعم التنوع ونخلق فرصاً متساوية لجميع الباحثين عن عمل.",
+    "ourImpact": "تأثيرنا",
+    "ourImpactSubtitle": "إحداث فرق في سوق العمل",
     "activeJobs": "الوظائف النشطة",
     "companies": "الشركات",
     "jobSeekers": "الباحثون عن عمل",
     "satisfactionRate": "معدل الرضا",
-    "ourTeam": "فريقنا",
-    "ceo": "الرئيس التنفيذي والشريك المؤسس",
-    "cto": "المدير التنفيذي للتكنولوجيا والشريك المؤسس",
+    "ourTeam": "تعرف على فريقنا",
+    "ourTeamSubtitle": "محترفون متحمسون مكرسون لنجاحك",
+    "ceoFounder": "الرئيس التنفيذي والمؤسس",
+    "cto": "المدير التنفيذي للتكنولوجيا",
     "headOfDesign": "رئيس التصميم",
     "headOfGrowth": "رئيس النمو",
-    "teamMemberBio1": "نائب رئيس سابق في مايكروسوفت، أكثر من 15 عاماً في التوظيف",
-    "teamMemberBio2": "مهندس سابق في جوجل، متخصص في الذكاء الاصطناعي",
-    "teamMemberBio3": "مصمم UX حائز على جوائز",
-    "teamMemberBio4": "خبير تسويق، أكثر من 10 سنوات"
+    "teamMember1Name": "سارة جونسون",
+    "teamMember1Bio": "أكثر من 15 عاماً في تقنية الموارد البشرية والتوظيف",
+    "teamMember2Name": "مايكل تشين",
+    "teamMember2Bio": "مهندس سابق في جوجل، متخصص في الذكاء الاصطناعي",
+    "teamMember3Name": "إميلي رودريغيز",
+    "teamMember3Bio": "مصممة UX حائزة على جوائز",
+    "teamMember4Name": "ديفيد كيم",
+    "teamMember4Bio": "خبير تسويق، أكثر من 10 سنوات",
+    "joinCommunity": "انضم إلى مجتمعنا",
+    "joinCommunityText": "سواء كنت تبحث عن فرصتك التالية أو تبني فريق أحلامك، نحن هنا لمساعدتك على النجاح.",
+    "getStarted": "ابدأ الآن",
+    "browseJobs": "تصفح الوظائف"
   },
   "messages": {
     "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر؟",
@@ -817,5 +906,78 @@
     "date": "يرجى إدخال تاريخ صالح",
     "min": "يجب أن يكون {field} على الأقل {min}",
     "max": "يجب ألا يتجاوز {field} {max}"
+  },
+  "savedJobs": {
+    "title": "الوظائف المحفوظة",
+    "subtitle": "الوظائف التي قمت بحفظها لوقت لاحق",
+    "noSavedJobs": "لا توجد وظائف محفوظة",
+    "startSaving": "ابدأ بحفظ الوظائف لبناء مجموعتك",
+    "browseJobs": "تصفح الوظائف",
+    "unsave": "إلغاء الحفظ",
+    "removeFromSaved": "إزالة من الوظائف المحفوظة",
+    "jobRemoved": "تمت إزالة الوظيفة من المحفوظات",
+    "failedToLoad": "فشل تحميل الوظائف المحفوظة",
+    "failedToUnsave": "فشل إلغاء حفظ الوظيفة"
+  },
+  "myApplications": {
+    "title": "طلباتي",
+    "subtitle": "تتبع وإدارة طلبات التوظيف الخاصة بك",
+    "searchPlaceholder": "البحث بعنوان الوظيفة أو الشركة...",
+    "statusFilter": "حالة الطلب",
+    "allStatus": "جميع الحالات",
+    "pending": "قيد الانتظار",
+    "reviewed": "تمت المراجعة",
+    "accepted": "مقبول",
+    "rejected": "مرفوض",
+    "noApplications": "لا توجد طلبات بعد",
+    "noApplicationsMessage": "لم تتقدم لأي وظائف بعد.",
+    "noMatchingApplications": "لا توجد طلبات تطابق الفلاتر.",
+    "browseJobs": "تصفح الوظائف",
+    "viewJob": "عرض الوظيفة",
+    "viewCV": "عرض السيرة الذاتية",
+    "withdraw": "سحب الطلب",
+    "withdrawing": "جاري السحب...",
+    "applied": "تم التقديم",
+    "previous": "السابق",
+    "prev": "السابق",
+    "next": "التالي",
+    "pendingReview": "قيد المراجعة",
+    "confirmWithdraw": "هل أنت متأكد من رغبتك في سحب طلبك لـ {jobTitle}؟",
+    "withdrawSuccess": "تم سحب الطلب بنجاح",
+    "withdrawFailed": "فشل سحب الطلب",
+    "loadFailed": "فشل تحميل الطلبات",
+    "today": "اليوم",
+    "yesterday": "أمس",
+    "daysAgo": "منذ {count} أيام",
+    "weeksAgo": "منذ {count} أسابيع",
+    "monthsAgo": "منذ {count} أشهر"
+  },
+  "myJobs": {
+    "title": "وظائفي",
+    "subtitle": "إدارة جميع إعلانات الوظائف الخاصة بك",
+    "postNewJob": "نشر وظيفة جديدة",
+    "noCompanyProfile": "لا يوجد ملف شركة",
+    "noCompanyMessage": "تحتاج إلى إنشاء ملف شركة قبل نشر الوظائف.",
+    "createCompanyProfile": "إنشاء ملف الشركة",
+    "noJobsYet": "لم يتم نشر وظائف بعد",
+    "noJobsMessage": "ابدأ بنشر الوظائف للعثور على المرشحين المثاليين.",
+    "postYourFirstJob": "انشر وظيفتك الأولى",
+    "errorLoadingJobs": "خطأ في تحميل الوظائف",
+    "featured": "مميز",
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "viewDetails": "عرض التفاصيل",
+    "editJob": "تعديل الوظيفة",
+    "deleteJob": "حذف الوظيفة",
+    "application": "طلب",
+    "applications": "طلبات",
+    "postedOn": "نُشر في",
+    "expiresOn": "ينتهي في",
+    "deleteJobTitle": "حذف الوظيفة",
+    "deleteJobConfirm": "هل أنت متأكد أنك تريد حذف <strong>{jobTitle}</strong>؟ لا يمكن التراجع عن هذا الإجراء وسيتم أيضاً حذف جميع الطلبات المرتبطة بهذه الوظيفة.",
+    "cancel": "إلغاء",
+    "deleting": "جاري الحذف...",
+    "deleteSuccess": "تم حذف الوظيفة بنجاح",
+    "deleteFailed": "فشل حذف الوظيفة"
   }
 }
