--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -116,9 +116,12 @@
     "createAccountButton": "Create Account",
     "alreadyHaveAccount": "Already have an account?",
     "dontHaveAccount": "Don't have an account?",
+    "noAccount": "Don't have an account?",
     "signInHere": "Sign in",
+    "signIn": "Sign In",
     "signUpFree": "Sign up for free",
     "backToLogin": "← Back to Login",
+    "backToLoginArrow": "← Back to Login",
     "backToProfile": "Back to Profile",
     "loginSuccess": "Login successful!",
     "registerSuccess": "Registration successful!",
@@ -130,12 +133,15 @@
     "accountType": "Account Type",
     "jobSeeker": "I'm a Job Seeker",
     "companyOwner": "I'm a Company",
+    "imJobSeeker": "I'm a Job Seeker",
+    "imCompany": "I'm a Company",
     "employer": "Employer",
     "adminOnly": "Admin Only",
     "welcomeBack": "Welcome Back",
     "createAccount": "Create Account",
     "signInJobSeeker": "Sign in to find your dream job",
     "signInCompany": "Sign in to manage your company",
+    "joinJobsIQ": "Join JobsIQ and start your career journey",
     "registerJobSeeker": "Join JobsIQ and start your career journey",
     "registerCompany": "Register your company and find great talent",
     "companyName": "Company Name",
@@ -143,6 +149,7 @@
     "yourFullName": "Your Full Name",
     "yourEmail": "Your Email",
     "agreeToTerms": "I agree to the",
+    "iAgreeToThe": "I agree to the",
     "termsOfService": "Terms of Service",
     "and": "and",
     "privacyPolicy": "Privacy Policy",
@@ -153,8 +160,10 @@
     "passwordStrengthStrong": "Strong password",
     "forgotPasswordTitle": "Forgot Password?",
     "forgotPasswordSubtitle": "No worries! Enter your email address and we'll send you a link to reset your password.",
+    "forgotPasswordMessage": "No worries! Enter your email address and we'll send you a link to reset your password.",
     "sendResetLink": "Send Reset Link",
     "checkYourEmail": "Check Your Email",
+    "resetLinkSent": "We've sent a password reset link to {email}. Please check your inbox and follow the instructions.",
     "resetLinkSentTo": "We've sent a password reset link to {email}. Please check your inbox and follow the instructions to reset your password.",
     "resetPasswordTitle": "Reset Password",
     "resetPasswordSubtitle": "Please enter your new password.",
@@ -197,6 +206,7 @@
     "yourEmailPlaceholder": "john@company.com",
     "namePlaceholder": "John Doe",
     "companyNamePlaceholder": "Acme Corporation",
+    "passwordPlaceholder": "Enter your password",
     "enterPassword": "Enter your password"
   },
   "jobs": {
@@ -284,6 +294,7 @@
     "shareOnTwitter": "Share on X",
     "shareOnFacebook": "Share on Facebook",
     "shareOnInstagram": "Share on Instagram",
+    "shareOnLinkedIn": "Share on LinkedIn",
     "shareOnSnapchat": "Share on Snapchat",
     "copyLink": "Copy Link",
     "linkCopied": "Link copied to clipboard!",
@@ -343,7 +354,10 @@
     "resumeCvRequired": "Resume/CV *",
     "coverLetterOptional": "Cover Letter",
     "tellUsWhyGreatFit": "Tell us why you're a great fit for this role...",
-    "junior": "Junior"
+    "junior": "Junior",
+    "compensation": "Compensation",
+    "jobOverview": "Job Overview",
+    "department": "Department"
   },
   "companies": {
     "title": "Companies",
@@ -360,11 +374,36 @@
     "companyDetails": "Company Details",
     "createCompany": "Create Company",
     "editCompany": "Edit Company",
+    "updateYourCompanyInformation": "Update your company information",
     "deleteCompany": "Delete Company",
+    "companyNotFound": "Company not found",
+    "goBack": "Go Back",
     "myCompanies": "My Companies",
     "viewAllJobs": "View All Jobs",
     "followCompany": "Follow Company",
     "unfollowCompany": "Unfollow Company",
+    "basicInformation": "Basic Information",
+    "enterCompanyName": "Enter company name",
+    "chooseLogo": "Choose Logo",
+    "coverImage": "Cover Image",
+    "chooseCover": "Choose Cover",
+    "uploadCompanyImages": "Upload Company Images",
+    "uploadImages": "Upload Images",
+    "imagesUploaded": "{count} / 10 images uploaded",
+    "briefOverviewCompany": "Brief overview of your company...",
+    "tellUsAboutCompany": "Tell us about your company...",
+    "shortCompanyTagline": "Short company tagline",
+    "selectCountry": "Select country",
+    "selectCompanySize": "Select company size",
+    "foundedDate": "Founded Date",
+    "updateCompany": "Update Company",
+    "companyNameRequired": "Company Name *",
+    "companyPictures": "Company Pictures",
+    "maximum10Images": "(Maximum 10 images)",
+    "chooseCoverImage": "Choose Cover Image",
+    "pngJpgGifUpTo2MB": "PNG, JPG, GIF up to 2MB",
+    "pngJpgGifUpTo2MBEach": "PNG, JPG, GIF up to 2MB each",
+    "updateYourCompanyInfo": "Update your company information",
     "noCompaniesFound": "No companies found",
     "searchCompanies": "Search companies...",
     "tryAdjustingSearch": "Try adjusting your search criteria",
@@ -397,18 +436,54 @@
     "facebook": "Facebook",
     "instagram": "Instagram",
     "youtube": "YouTube",
-    "companyNotFound": "Company Not Found",
     "browseAllCompanies": "Browse All Companies",
     "memberSince": "Member Since",
     "followUs": "Follow Us",
     "noOpenPositions": "No Open Positions",
     "thisCompanyHasNoActiveJobs": "This company currently has no active job postings.",
-    "companyPhotos": "Company Photos",
+        "companyPhotos": "Company Photos",
+    "viewCompanyProfile": "View Company Profile",
     "location": "Location",
     "active": "Active",
     "email": "Email",
     "description": "Description",
-    "noDescriptionAvailable": "No description available."
+    "noDescriptionAvailable": "No description available.",
+    "quickActions": "Quick Actions",
+    "postNewJob": "Post New Job",
+    "viewPublicProfile": "View Public Profile",
+    "phone": "Phone",
+    "address": "Address",
+    "postedJobs": "Posted Jobs",
+    "deleteJob": "Delete Job",
+    "areYouSureDeleteJob": "Are you sure you want to delete",
+    "deleteJobWarning": "This action cannot be undone and all applications for this job will be lost.",
+    "areYouSureDeleteCompany": "Are you sure you want to delete",
+    "deleteCompanyWarning": "This action cannot be undone and will also delete all jobs and applications associated with this company.",
+    "noJobsPostedYet": "No Jobs Posted Yet",
+    "startPostingJobs": "Start posting jobs to attract talented candidates.",
+    "postYourFirstJob": "Post Your First Job",
+    "remote": "Remote",
+    "companyNotFoundMessage": "The company you're looking for doesn't exist or has been removed.",
+    "inactive": "Inactive",
+    "companyType": "Company Type",
+    "selectType": "Select type",
+    "startup": "Startup",
+    "smallBusiness": "Small Business",
+    "midMarket": "Mid Market",
+    "enterprise": "Enterprise",
+    "nonprofit": "Nonprofit",
+    "government": "Government",
+    "agency": "Agency",
+    "contactInformation": "Contact Information",
+    "category": "Category",
+    "selectCategory": "Select category",
+    "streetAddress": "Street Address",
+    "typeToSearchCities": "Type to search cities...",
+    "companyStatus": "Company Status",
+    "companyActive": "Company Active",
+    "companyActiveDescription": "Make this company visible to job seekers",
+    "currentlyHiring": "Currently Hiring",
+    "currentlyHiringDescription": "Show \"We're Hiring\" badge on company profile"
   },
   "cv": {
     "title": "CV",
@@ -755,28 +830,42 @@
   },
   "about": {
     "title": "About JobsIQ",
+    "subtitle": "We're on a mission to connect talented professionals with their dream jobs and help companies build amazing teams.",
     "ourMission": "Our Mission",
-    "ourMissionText": "To connect talented professionals with their dream careers and help companies find the perfect candidates.",
-    "ourValues": "Our Values",
+    "ourMissionText1": "At JobsIQ, we believe that finding the right job should be simple, transparent, and empowering. Our platform connects job seekers with opportunities that match their skills, values, and career aspirations.",
+    "ourMissionText2": "We're committed to creating a fair and inclusive hiring process where talent is recognized and opportunities are accessible to everyone.",
+    "ourValues": "Our Core Values",
+    "ourValuesSubtitle": "The principles that guide everything we do",
     "transparency": "Transparency",
     "transparencyDesc": "We believe in open and honest communication at every step of the hiring process.",
     "innovation": "Innovation",
     "innovationDesc": "We continuously improve our platform with cutting-edge technology and features.",
-    "diversity": "Diversity & Inclusion",
-    "diversityDesc": "We champion diversity and create equal opportunities for all job seekers.",
+    "inclusivity": "Inclusivity",
+    "inclusivityDesc": "We champion diversity and create equal opportunities for all job seekers.",
+    "ourImpact": "Our Impact",
+    "ourImpactSubtitle": "Making a difference in the job market",
     "activeJobs": "Active Jobs",
     "companies": "Companies",
     "jobSeekers": "Job Seekers",
     "satisfactionRate": "Satisfaction Rate",
-    "ourTeam": "Our Team",
-    "ceo": "CEO & Co-Founder",
-    "cto": "CTO & Co-Founder",
+    "ourTeam": "Meet Our Team",
+    "ourTeamSubtitle": "Passionate professionals dedicated to your success",
+    "ceoFounder": "CEO & Founder",
+    "cto": "CTO",
     "headOfDesign": "Head of Design",
     "headOfGrowth": "Head of Growth",
-    "teamMemberBio1": "Former Microsoft VP, 15+ years in recruitment",
-    "teamMemberBio2": "Former Google engineer, AI specialist",
-    "teamMemberBio3": "Award-winning UX designer",
-    "teamMemberBio4": "Marketing expert, 10+ years"
+    "teamMember1Name": "Sarah Johnson",
+    "teamMember1Bio": "15+ years in HR tech and recruitment",
+    "teamMember2Name": "Michael Chen",
+    "teamMember2Bio": "Former Google engineer, AI specialist",
+    "teamMember3Name": "Emily Rodriguez",
+    "teamMember3Bio": "Award-winning UX designer",
+    "teamMember4Name": "David Kim",
+    "teamMember4Bio": "Marketing expert, 10+ years",
+    "joinCommunity": "Join Our Community",
+    "joinCommunityText": "Whether you're looking for your next opportunity or building your dream team, we're here to help you succeed.",
+    "getStarted": "Get Started",
+    "browseJobs": "Browse Jobs"
   },
   "messages": {
     "confirmDelete": "Are you sure you want to delete this item?",
@@ -816,5 +905,78 @@
     "date": "Please enter a valid date",
     "min": "{field} must be at least {min}",
     "max": "{field} must not exceed {max}"
+  },
+  "savedJobs": {
+    "title": "Saved Jobs",
+    "subtitle": "Jobs you've saved for later",
+    "noSavedJobs": "No Saved Jobs",
+    "startSaving": "Start saving jobs to build your collection",
+    "browseJobs": "Browse Jobs",
+    "unsave": "Unsave",
+    "removeFromSaved": "Remove from saved jobs",
+    "jobRemoved": "Job removed from saved",
+    "failedToLoad": "Failed to load saved jobs",
+    "failedToUnsave": "Failed to unsave job"
+  },
+  "myApplications": {
+    "title": "My Applications",
+    "subtitle": "Track and manage your job applications",
+    "searchPlaceholder": "Search by job title or company...",
+    "statusFilter": "Application Status",
+    "allStatus": "All Status",
+    "pending": "Pending",
+    "reviewed": "Reviewed",
+    "accepted": "Accepted",
+    "rejected": "Rejected",
+    "noApplications": "No Applications Yet",
+    "noApplicationsMessage": "You haven't applied to any jobs yet.",
+    "noMatchingApplications": "No applications match your filters.",
+    "browseJobs": "Browse Jobs",
+    "viewJob": "View Job",
+    "viewCV": "View CV",
+    "withdraw": "Withdraw",
+    "withdrawing": "Withdrawing...",
+    "applied": "Applied",
+    "previous": "Previous",
+    "prev": "Prev",
+    "next": "Next",
+    "pendingReview": "Pending Review",
+    "confirmWithdraw": "Are you sure you want to withdraw your application for {jobTitle}?",
+    "withdrawSuccess": "Application withdrawn successfully",
+    "withdrawFailed": "Failed to withdraw application",
+    "loadFailed": "Failed to load applications",
+    "today": "today",
+    "yesterday": "yesterday",
+    "daysAgo": "{count} days ago",
+    "weeksAgo": "{count} weeks ago",
+    "monthsAgo": "{count} months ago"
+  },
+  "myJobs": {
+    "title": "My Jobs",
+    "subtitle": "Manage all your job postings",
+    "postNewJob": "Post New Job",
+    "noCompanyProfile": "No Company Profile",
+    "noCompanyMessage": "You need to create a company profile before posting jobs.",
+    "createCompanyProfile": "Create Company Profile",
+    "noJobsYet": "No Jobs Posted Yet",
+    "noJobsMessage": "Start posting jobs to find the perfect candidates.",
+    "postYourFirstJob": "Post Your First Job",
+    "errorLoadingJobs": "Error loading jobs",
+    "featured": "Featured",
+    "active": "Active",
+    "inactive": "Inactive",
+    "viewDetails": "View Details",
+    "editJob": "Edit Job",
+    "deleteJob": "Delete Job",
+    "application": "Application",
+    "applications": "Applications",
+    "postedOn": "Posted on",
+    "expiresOn": "Expires on",
+    "deleteJobTitle": "Delete Job",
+    "deleteJobConfirm": "Are you sure you want to delete <strong>{jobTitle}</strong>? This action cannot be undone and will also delete all applications associated with this job.",
+    "cancel": "Cancel",
+    "deleting": "Deleting...",
+    "deleteSuccess": "Job deleted successfully",
+    "deleteFailed": "Failed to delete job"
   }
 }
