transations, arabic trans, en, ar

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -789,6 +789,13 @@
       "manager": "مدير"
     },
     "howItWorks": "كيف يعمل",
+    "howItWorksSubtitle": "احصل على وظيفة في 3 خطوات بسيطة",
+    "stepCreateTitle": "إنشاء حساب",
+    "stepCreateDesc": "سجل مجاناً وابني ملفك المهني في دقائق",
+    "stepSearchTitle": "ابحث وقدم",
+    "stepSearchDesc": "تصفح آلاف الوظائف وقدم على الوظائف التي تناسب مهاراتك",
+    "stepHiredTitle": "احصل على الوظيفة",
+    "stepHiredDesc": "تواصل مع أصحاب العمل واحصل على وظيفة أحلامك",
     "features": "المميزات",
     "whyChooseUs": "لماذا تختار JobsIQ؟",
     "bestPlatform": "نوفر أفضل منصة للباحثين عن عمل وأصحاب العمل",
@@ -808,6 +815,8 @@
     "testimonials": "ماذا يقول الناس",
     "cta": "هل أنت مستعد للبدء؟",
     "ctaSubtitle": "انضم إلى آلاف الباحثين عن عمل وأصحاب العمل",
+    "ctaSubtitleFull": "انضم إلى آلاف الباحثين عن عمل وأصحاب العمل الذين يثقون في JobsIQ لتلبية احتياجاتهم المهنية",
+    "createFreeAccount": "إنشاء حساب مجاني",
     "companyCta": "هل تبحث عن موظفين؟",
     "companyCtaSubtitle": "انشر وظائفك واعثر على المرشحين المثاليين",
     "postJobButton": "انشر وظيفة",
