--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -788,6 +788,13 @@
       "manager": "Manager"
     },
     "howItWorks": "How It Works",
+    "howItWorksSubtitle": "Get hired in 3 simple steps",
+    "stepCreateTitle": "Create Account",
+    "stepCreateDesc": "Sign up for free and build your professional profile in minutes",
+    "stepSearchTitle": "Search & Apply",
+    "stepSearchDesc": "Browse thousands of jobs and apply to positions that match your skills",
+    "stepHiredTitle": "Get Hired",
+    "stepHiredDesc": "Connect with employers and land your dream job",
     "features": "Features",
     "whyChooseUs": "Why Choose JobsIQ?",
     "bestPlatform": "We provide the best platform for job seekers and employers",
@@ -807,6 +814,8 @@
     "testimonials": "What People Say",
     "cta": "Ready to Get Started?",
     "ctaSubtitle": "Join thousands of job seekers and employers",
+    "ctaSubtitleFull": "Join thousands of job seekers and employers who trust JobsIQ for their career needs",
+    "createFreeAccount": "Create Free Account",
     "companyCta": "Are You Hiring?",
     "companyCtaSubtitle": "Post your jobs and find the perfect candidates",
     "postJobButton": "Post a Job",
